--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-openpyxl
-pandas
-xlrd
-beautifulsoup4
-lxml
+openpyxl>=3.0.0
+pandas>=1.3.0
+xlrd>=2.0.0
+beautifulsoup4>=4.9.0
+lxml>=4.6.0
+psutil>=5.9.0
+pytest>=6.0.0
+coverage>=5.0.0
+pytest-cov>=6.0.0
